# matrix_calculator_b

./: CMakeLists.txt  Test.cpp
sources/: Matrix.cpp  Matrix.hpp
